--- a/apache-server/tasks/main.yml
+++ b/apache-server/tasks/main.yml
@@ -1,6 +1,11 @@
 ---
 # tasks file for apache-server
- 
-- name: Install Apache
-  yum: name=httpd state=latest
+
+- name: install yum
+  yum: "*"
+  state: latest
   
+- name: install apache
+  yum: name=httpd state=latest
+
+ 
