--- a/apache-server/tasks/main.yml
+++ b/apache-server/tasks/main.yml
@@ -1,11 +1,20 @@
 ---
 # tasks file for apache-server
+- name: install yum latest packages
+  yum: 
+   name: "*"
+   state: present 
+   
+- name: Install Apache.
+  yum:
+    name:
+      - httpd
+      - httpd-devel
+    state: present
 
-- name: install yum
-  yum: "*"
-  state: latest
-  
-- name: install apache
-  yum: name=httpd state=latest
-
+- name: Ensure Apache started
+  service:
+    name: httpd
+    state: started
+    enabled: true
  
