--- a/apache-server/tasks/main.yml
+++ b/apache-server/tasks/main.yml
@@ -1,9 +1,8 @@
 ---
 # tasks file for apache-server
-- name: install yum latest packages
-  yum: 
-   name: "*"
-   state: present 
+
+- name: upgrade all packages
+  yum: name=* state=latest
    
 - name: Install Apache.
   yum:
